--- a/app/src/main/res/menu-v26/setting_menu.xml
+++ b/app/src/main/res/menu-v26/setting_menu.xml
@@ -36,11 +36,19 @@
         />
 </group>
 
-    <item
-        android:id="@+id/item_menu_setting_account"
-        android:icon="@drawable/ic_credit_card_foreground"
-        android:title="@string/account"
-        app:showAsAction="ifRoom" />
+    <group>
+        <item
+            android:id="@+id/item_menu_setting_account"
+            android:icon="@drawable/ic_credit_card_foreground"
+            android:title="@string/account"
+            app:showAsAction="ifRoom" />
+
+        <item
+            android:id="@+id/sms_list_paid"
+            android:icon="@android:drawable/stat_notify_chat"
+            android:title="@string/sms_paid"
+            />
+    </group>
 
     <item
         android:id="@+id/item_menu_setting_check_paids"
