--- a/app/src/main/res/menu-v26/setting_menu.xml
+++ b/app/src/main/res/menu-v26/setting_menu.xml
@@ -57,6 +57,11 @@
         />
 
     <item
+        android:id="@+id/item_menu_setting_settings_application"
+        android:icon="@android:drawable/ic_menu_set_as"
+        android:title="@string/settings_app"/>
+
+    <item
     android:id="@+id/item_menu_setting_about_it"
     android:icon="@drawable/ic_credit_card_foreground"
     android:title="@string/about_it"/>
