--- a/app/src/main/res/layout/fragment_period_check_payments.xml
+++ b/app/src/main/res/layout/fragment_period_check_payments.xml
@@ -1,29 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/space_min"
+    android:orientation="vertical"
     tools:context=".finanzas.controller.paids.PeriodCheckPaymentsFragment">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="@dimen/space_min"
-        android:padding="@dimen/space_min">
+   <androidx.compose.ui.platform.ComposeView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:id="@+id/cv_compose_fpcp"/>
 
-        <ProgressBar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/pb_load_pcp"/>
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_periods_pcp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-    </LinearLayout>
-
-</com.google.android.material.card.MaterialCardView>
+</LinearLayout>
