--- a/ui/src/main/res/values/value.xml
+++ b/ui/src/main/res/values/value.xml
@@ -6,4 +6,5 @@
     <string name="see_more">Ver más</string>
     <string name="close">Cerrar</string>
     <string name="money">Dinero</string>
+    <string name="any_data_to_show">No hay datos que mostrar</string>
 </resources>
