--- a/app/src/main/res/layout/fragment_monthly_credit_list.xml
+++ b/app/src/main/res/layout/fragment_monthly_credit_list.xml
@@ -6,91 +6,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="@dimen/space_min"
     tools:context=".finanzas.controller.creditfix.MonthlyCreditListFragment">
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <LinearLayout
+
+    <androidx.compose.ui.platform.ComposeView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <ProgressBar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/pb_load_mcl"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:prefixText="$"
-                style="@style/MaterialTextInputLayoutView"
-                android:hint="@string/total_debt">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_tot_debt_mcl"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/money_hint"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:textAlignment="center"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="2"
-        style="@style/MaterialTextInputLayoutView"
-        android:hint="@string/num_credits">
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tv_num_credits_mcl"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/months_number_hint"
-            android:enabled="false"
-            style="@style/MaterialTextInputLayoutView"
-            android:textAlignment="center"
-            />
-    </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:prefixText="$"
-                android:layout_weight="1"
-                style="@style/MaterialTextInputLayoutView"
-                android:hint="@string/total_quote">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/tv_tot_quote_mcl"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/money_hint"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:textAlignment="center"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-</LinearLayout>
-        </LinearLayout>
-
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_list_mcl"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
-
-    </LinearLayout>
-
-</ScrollView>
+        android:id="@+id/cv_mcl"/>
 
 </com.google.android.material.card.MaterialCardView>
