feature Additional Values
update version

Signed-off-by: alejandro parra <alejandroparral@gmail.com>

--- a/app/src/main/res/layout/fragment_credit_list.xml
+++ b/app/src/main/res/layout/fragment_credit_list.xml
@@ -7,172 +7,8 @@
     android:orientation="vertical"
     tools:context=".finanzas.controller.creditfix.CreditListFragment">
 
-    <ScrollView
+    <androidx.compose.ui.platform.ComposeView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_min">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="wrap_content">
-
-                <ProgressBar
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/pb_load_cfl"/>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:hint="@string/date_bill">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:textAlignment="center"
-                        android:text="@string/date_hint"
-                        android:enabled="false"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:id="@+id/date_bill_cfl"
-                        android:layout_height="wrap_content"/>
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    app:prefixText="$"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:hint="@string/quote_value">
-                    <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:textAlignment="center"
-                        android:id="@+id/value_cfl"
-                        android:enabled="false"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:text="@string/money_hint"
-                        android:layout_height="wrap_content"/>
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:prefixText="$"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:hint="@string/interest_value">
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:textAlignment="center"
-                            android:id="@+id/interest_cfl"
-                            android:enabled="false"
-                            style="@style/MaterialTextInputLayoutView"
-                            android:text="@string/money_hint"
-                            android:layout_height="wrap_content"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:prefixText="$"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:hint="@string/capital_value">
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:textAlignment="center"
-                            android:id="@+id/capital_cfl"
-                            android:enabled="false"
-                            style="@style/MaterialTextInputLayoutView"
-                            android:text="@string/money_hint"
-                            android:layout_height="wrap_content"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:prefixText="$"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:hint="@string/pending_to_pay">
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:textAlignment="center"
-                            android:enabled="false"
-                            style="@style/MaterialTextInputLayoutView"
-                            android:text="@string/money_hint"
-                            android:id="@+id/pending_cfl"
-                            android:layout_height="wrap_content"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        app:prefixText="$"
-                        style="@style/MaterialTextInputLayoutView"
-                        android:hint="@string/aditional">
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:textAlignment="center"
-                            android:text="@string/money_hint"
-                            style="@style/MaterialTextInputLayoutView"
-                            android:enabled="false"
-                            android:id="@+id/additional_cfl"
-                            android:layout_height="wrap_content"/>
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-                    <com.google.android.material.button.MaterialButton
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/space_min"
-                        android:id="@+id/btn_detail_cfl"
-                        app:icon="@android:drawable/ic_menu_view"
-                        android:layout_weight="1"
-                        android:text="@string/detail"/>
-                    <com.google.android.material.button.MaterialButton
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:icon="@android:drawable/ic_menu_agenda"
-                        android:layout_margin="@dimen/space_min"
-                        android:id="@+id/btn_periods_cfl"
-                        android:layout_weight="1"
-                        android:text="@string/periods"/>
-                </LinearLayout>
-                <com.google.android.material.button.MaterialButton
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/space_min"
-                    android:id="@+id/btn_add_cfl"
-                    app:icon="@android:drawable/ic_menu_add"
-                    android:text="@string/add"/>
-
-                <co.japl.android.graphs.drawer.CustomDraw
-                    android:id="@+id/cv_canvas_cfl"
-                    android:layout_width="match_parent"
-                    android:layout_height="400dp"/>
-
-            </LinearLayout>
-
-
-        </com.google.android.material.card.MaterialCardView>
-
-    </ScrollView>
-
-
+        android:layout_height="wrap_content"
+        android:id="@+id/cv_component_cl"/>
 </LinearLayout>
