--- a/app/src/main/res/layout/fragment_credit_fix.xml
+++ b/app/src/main/res/layout/fragment_credit_fix.xml
@@ -7,194 +7,10 @@
     android:orientation="vertical"
     tools:context=".finanzas.controller.creditfix.CreditFixFragment">
 
-    <ScrollView
+    <androidx.compose.ui.platform.ComposeView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-<com.google.android.material.card.MaterialCardView
-    android:layout_width="match_parent"
-    android:layout_margin="@dimen/space_min"
-    android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical" >
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/kind_of_pay">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:focusable="false"
-                    android:textAlignment="center"
-                    android:text="@string/default_kind_of_pay"
-                    android:id="@+id/kindOfCFF"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
+        android:layout_height="wrap_content"
+        android:id="@+id/cv_component_cf"/>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:endIconMode="clear_text"
-                android:hint="@string/date_credit">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:id="@+id/dateCFF"
-                    android:focusable="false"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:endIconMode="clear_text"
-                android:hint="@string/name">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:id="@+id/NameCFF"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:endIconMode="clear_text"
-                android:hint="@string/value"
-                app:prefixText="$">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:inputType="numberDecimal"
-                    android:id="@+id/valueCFF"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                app:endIconMode="clear_text"
-                app:suffixText="@string/percent_symbol"
-                android:hint="@string/tax">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:inputType="numberDecimal"
-                    android:id="@+id/taxCFF"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                app:endIconMode="clear_text"
-                android:hint="@string/kind_of_tax">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:focusable="false"
-                    android:text="EM"
-                    android:id="@+id/kind_of_tax_CFF"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            </LinearLayout>
-            <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:endIconMode="clear_text"
-            android:hint="@string/periods">
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/periodsCFF"
-                android:textAlignment="center"
-                android:inputType="number"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/green_light_trans"
-                app:prefixText="$"
-                style="@style/MaterialTextInputLayoutView"
-                android:hint="@string/quote_value">
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/quoteValueCFF"
-                    android:enabled="false"
-                    style="@style/MaterialTextInputLayoutView"
-                    android:text="@string/money_hint"
-                    android:textAlignment="center"
-                    />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnAdditionalCFF"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:icon="@android:drawable/ic_menu_add"
-                android:layout_weight="1"
-                android:layout_margin="@dimen/space_min"
-                android:text="@string/aditional" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/btnAmortizationCFF"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="@dimen/space_min"
-                android:layout_weight="1"
-                app:icon="@android:drawable/ic_menu_search"
-                android:text="@string/amortization"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <com.google.android.material.button.MaterialButton
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/space_min"
-                    android:id="@+id/btnCancelCFF"
-                    android:layout_weight="1"
-                    app:icon="@android:drawable/ic_delete"
-                    android:text="@string/cancel"/>
-                <com.google.android.material.button.MaterialButton
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="@dimen/space_min"
-                    app:icon="@android:drawable/ic_menu_save"
-                    android:id="@+id/btn_save_cff"
-                    android:layout_weight="1"
-                    android:text="@string/save"/>
-
-            </LinearLayout>
-
-
-</LinearLayout>
-</com.google.android.material.card.MaterialCardView>
-    </ScrollView>
 
 </LinearLayout>
